--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -5,11 +5,11 @@ plugins {
     id "dev.flutter.flutter-gradle-plugin"
 }
 
-//def keystoreProperties = new Properties()
-//def keystorePropertiesFile = rootProject.file('key.properties')
-//if (keystorePropertiesFile.exists()) {
-//    keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
-//}
+def keystoreProperties = new Properties()
+def keystorePropertiesFile = rootProject.file('key.properties')
+if (keystorePropertiesFile.exists()) {
+    keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+}
 
 android {
     namespace = "com.example.scan_cook"
@@ -37,39 +37,39 @@ android {
         versionName = flutter.versionName
     }
 
-//    signingConfigs {
-//        release {
-//            keyAlias = keystoreProperties['keyAlias']
-//            keyPassword = keystoreProperties['keyPassword']
-//            storeFile = keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
-//            storePassword = keystoreProperties['storePassword']
-//        }
-//    }
-//    buildTypes {
-//        release {
-//            // TODO: Add your own signing config for the release build.
-//            // Signing with the debug keys for now,
-//            // so `flutter run --release` works.
-//            signingConfig = signingConfigs.debug
-//            signingConfig = signingConfigs.release
-//        }
-//    }
-
+    signingConfigs {
+        release {
+            keyAlias = keystoreProperties['keyAlias']
+            keyPassword = keystoreProperties['keyPassword']
+            storeFile = keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
+            storePassword = keystoreProperties['storePassword']
+        }
+    }
     buildTypes {
         release {
             // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
+            // Signing with the debug keys for now,
+            // so `flutter run --release` works.
             signingConfig = signingConfigs.debug
+            signingConfig = signingConfigs.release
         }
     }
+
+//    buildTypes {
+//        release {
+//            // TODO: Add your own signing config for the release build.
+//            // Signing with the debug keys for now, so `flutter run --release` works.
+//            signingConfig = signingConfigs.debug
+//        }
+//    }
 }
 
 flutter {
     source = "../.."
 }
 
-//dependencies {
-//    // ...
-//    implementation ('com.google.android.material:material:1.12.0')
-//    // ...
-//}
+dependencies {
+    // ...
+    implementation ('com.google.android.material:material:1.12.0')
+    // ...
+}
